# transformer

./: .clang-format  .gitignore  ASPIRATIONS.md  CMakeLists.txt  CMakePresets.json  README.md  readme.md
assets/: inverse_bind_pose.json
src/: main.cpp
src/app/: app.cpp  app.hpp
src/core/: app_input.hpp  math_types.hpp  math_utils.cpp  math_utils.hpp  profiler.cpp  profiler.hpp  types.hpp
src/io/: io_interfaces.hpp  json_readers.cpp  json_readers.hpp  obj_io.cpp  obj_io.hpp
src/skinning/: mesh_skinner.cpp  mesh_skinner.hpp
stress_tests_results/: stress_stats_1.0.json  stress_stats_1.1.json  stress_stats_1.2.json  stress_stats_1.3.json  stress_stats_1.4.json
tests/integration/: CMakeLists.txt  run_case.cmake
tests/integration/cases/basic/: params.txt
tests/integration/cases/basic/input/: bone_weight.json  new_pose.json
tests/stress/: CMakeLists.txt  run_stress.cmake
